# SimpleArtificialNeuralNetwork

./: CMakeLists.txt  Makefile  README.md  training.cc
controller/: controller.cc  controller.h
docs/: Doxyfile
model/: abstract_mlp.h  config.h  image.h  metrics.h  mlp.cc  mlp.h
model/graph_mlp/: graph_mlp.cc  graph_mlp.h  layer.cc  layer.h  neuron.cc  neuron.h
model/matrix_mlp/: matrix_mlp.cc  matrix_mlp.h
model/utility/: activation_functions.h  io.cc  io.h  matrix_operations.cc  matrix_operations.h  thread_pool.h
src/: main.cpp  mlp_app.pro
src/controller/: controller.h
src/model/matrix/: matrix.cc  matrix.h
src/model/parser/: data.cc  data.h
src/model/perceptron/: interface_perceptron.h
src/model/perceptron/graph_perceptron/: a.out  graph_perceptron  graph_perceptron.cc  graph_perceptron.h  layer.cc  layer.h  main.cc  neuron.cc  neuron.h
src/model/perceptron/graph_perceptron/graph_perceptron.dSYM/Contents/: Info.plist
src/model/perceptron/graph_perceptron/graph_perceptron.dSYM/Contents/Resources/DWARF/: graph_perceptron
src/model/perceptron/matrix_perceptron/: matrix_perceptron.cc  matrix_perceptron.h
src/source/dataset/: test.csv
src/view/: mlp_app.cc  mlp_app.h  paintscene.cc  paintscene.h
src/view/ui/: metrics_dialog.ui  mlp_app.ui
tests/: CMakeLists.txt  matrix_operations_tests.cc  parse_emnist_tests.cc  speed_matrix_ops.cc
view/: graph.cc  graph.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  painter.cpp  painter.h
